--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
+dist: trusty
 language: cpp
 compiler:
   - gcc
   - clang
 before_install: ./provision.sh
 script:
-  - make -C src test
+  - make test
 
